# groth-sahai-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: bench.rs  example.rs
src/: commit.rs  data_structures.rs  generator.rs  lib.rs  prover.rs  statement.rs  verifier.rs
src/prover/: commit.rs  mod.rs  prove.rs
tests/: commit.rs  example.rs  prover.rs
