[package]
name = "groth-sahai-rs"
version = "0.1.0"
authors = ["Jacob White <white570@purdue.edu>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An implementation of the Groth-Sahai zero-knowledge proof system in Rust"
repository = "https://github.com/jdwhite88/groth-sahai-rs"
readme = "README.md"
keywords = ["cryptography", "NIZK", "zero-knowledge", "elliptic curve", "bilinear"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] } # benchmarks

[profile.release]
debug = true

[lib]
bench = false
crate-type = ["cdylib"]

[[bench]]
name = "bench"
harness = false
