[package]
name = "groth-sahai"
version = "0.1.0"
authors = ["Jacob White <white570@purdue.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of the Groth-Sahai zero-knowledge proof system in Rust"
repository = "https://github.com/jdwhite88/groth-sahai-rs"
readme = "README.md"
keywords = ["cryptography", "NIZK", "zero-knowledge", "elliptic curve", "bilinear"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
ark-ec = { version = "^0.5.0", default-features = false }
ark-ff = { version = "^0.5.0", default-features = false }
ark-std = { version = "^0.5.0", default-features = false }
rayon = { version = "^1.5.1" }
ark-serialize = { version = "^0.5.0", features = ["derive"] }

[dev-dependencies]
ark-bls12-381 = { version = "^0.5.0" }
criterion = { version = "0.5", features = [ "html_reports" ] } # benchmarks

[profile.release]
debug = true

[[bench]]
name = "bench"
harness = false
